option('tests', type: 'feature', value: 'enabled', description: 'Build tests')
option(
    'bindings',
    type: 'array',
    description: 'Bindings to include',
    choices: ['serial', 'astlpc', 'i2c'],
    value: ['serial', 'astlpc', 'i2c'],
)
option(
    'default_alloc',
    type: 'feature',
    description: 'Use libc malloc and free for heap memory',
)
option('stdio', type: 'feature', description: 'Support logging to stdio')
option(
    'fileio',
    type: 'feature',
    description: 'Support interfaces based on file-descriptors',
)
option('syslog', type: 'feature', description: 'Support logging to syslog')
option(
    'custom_alloc',
    type: 'boolean',
    value: false,
    description: 'Use fixed application-provided allocators',
)
option(
    'nolog',
    type: 'boolean',
    value: false,
    description: 'Don\'t include any logging functionality',
)
option(
    'control',
    type: 'boolean',
    value: true,
    description: 'Include MCTP control protocol handler',
)
